--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -93,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "6ffd0499-f271-4eaa-a188-08808dd19930"
   }
 }
